# Politiflow

./: cli.py  main.py  models.py  politiflow.db  pyproject.toml  scraper.py  web.py
static/js/: main.js
templates/: index.html
